/*proto文件需要與Server端一致才能響應*/

/*Protocol Buffers Format version*/
syntax = "proto3";
/*Namespace like to distinct Model*/
package gRPCTest.humanresource;
/*C# Namespace*/
option csharp_namespace = "L8_SignalR.Protos";

/*定義所有的rpc服務 input and ouput*/
service Employee {
	rpc GetEmployee (EmployeeRequest) returns (EmployeeModel);
	rpc GetAllEmployees (EmployeeRequest) returns (stream EmployeeModel);
	rpc AddEmployee (EmployeeModel) returns (EmployeeAddedResult);
	/*Stream is list of Model */
	rpc AddEmployees (stream EmployeeModel) returns (EmployeeAddedResult);
}
/*Message struction*/
message EmployeeRequest {
	int32 id = 1;
}

message EmployeeModel{
	int32 id = 1;
	string name = 2;

	message PhoneNumber{
		string value=1;
	}
	/*repeated use to call specify struction*/
	repeated PhoneNumber phone_numbers = 3;

	EmployeeType employee_type=4;

	int64 modifiedTime = 5;
}

enum EmployeeType{
	FIRST_LEVEL = 0;
	SECOND_LEVEL = 1;
	LAST_LEVEL = 2;
}

message EmployeeAddedResult{
	bool is_success = 1;
}

